using System;
namespace GroupClasses.Library.Datas
{
    public class DataValue
    {
        public int Id
        {
            get;
            set;
        }

        public string Name
        {
            get;
            set;
        }

        public DataValueType Type
        {
            get;
            set;
        }
    }
}
