using System;
namespace GroupClasses.Library.Datas
{
    public enum DataValueType
    {
        Number,
        String,
    }
}
